Code cleanup and improvement with modern java syntax (#2449)
Mostly the change is on replacing stream().forEach() with collection forEach()